--- a/styles/classic_mirage_color_scheme/_dspace_variables.scss
+++ b/styles/classic_mirage_color_scheme/_dspace_variables.scss
@@ -13,7 +13,7 @@ $center-section-padding-bottom: 20px;
 $artifact-title-font-size:         ceil($font-size-base * 1.1666) !default; // ~14px
 
 /* dbaker - */
-$navbar-inverse-bg: #fff;
+$navbar-inverse-bg: #f7f7f7;
 $navbar-inverse-color: #000;
 $navbar-inverse-link-color: #000;
 $almost-white: #ebe8e4;
